--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
       </ol>
     </div>
     <div class="section5-pic reveal">
-      <div class="row">
-        <div class="col-sm-4"><img src="pic/section5-1.png"></div>
-        <div class="col-sm-4"><img src="pic/section5-2.png"></div>
-        <div class="col-sm-4"><img src="pic/section5-3.png"></div>
+      <div class="row justify-content-center column-gap-4 row-gap-4">
+        <div class="col-sm-3"><img src="pic/section5-1.png"></div>
+        <div class="col-sm-3"><img src="pic/section5-2.png"></div>
+        <div class="col-sm-3"><img src="pic/section5-3.png"></div>
       </div>
     </div>
 
